--- a/libs/articles/feature-article/src/lib/article-meta/article-meta.component.html
+++ b/libs/articles/feature-article/src/lib/article-meta/article-meta.component.html
@@ -1,49 +1,51 @@
-<div class="article-meta">
-  <a [routerLink]="['/profile', article.author.username]">
-    <img [src]="article.author.image" />
-  </a>
-  <div class="info">
-    <a class="author" [routerLink]="['/profile', article.author.username]">
-      {{ article.author.username }}
-    </a>
-    <span class="date">{{ article.createdAt | date : 'longDate' }}</span>
+<div style="text-align: left">
+  <div *ngFor="let author of article.authors; let i = index" style="margin-bottom: 20px">
+    <div style="display: flex; align-items: center; margin-bottom: 5px; margin-top: 20px">
+      <a [routerLink]="['/profile', author.username]" style="display: flex; align-items: center; margin-right: 10px">
+        <img [src]="author.image" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px" />
+        {{ author.username }}
+      </a>
+      <button
+        class="btn btn-sm action-btn"
+        [ngClass]="{
+          'btn-outline-secondary': !author.following,
+          'btn-secondary': author.following
+        }"
+        (click)="toggleFollow(author.username)"
+        style="margin-left: 20px"
+      >
+        <i class="ion-plus-round"></i>
+        &nbsp; {{ author.following ? 'Unfollow' : 'Follow' }}
+        {{ author.username }}
+      </button>
+    </div>
+    <span class="date" style="font-size: 0.8em">{{ article.createdAt | date : 'longDate' }}</span>
   </div>
 
-  <span [hidden]="!canModify">
-    <a class="btn btn-sm btn-outline-secondary" [routerLink]="['/editor', article.slug]">
-      <i class="ion-edit"></i> Edit Article
-    </a>
+  <div style="margin-top: 20px">
+    <span [hidden]="!canModify">
+      <a class="btn btn-sm btn-outline-secondary" [routerLink]="['/editor', article.slug]" style="margin-right: 10px">
+        <i class="ion-edit"></i> Edit Article
+      </a>
+      <button class="btn btn-sm btn-outline-danger" (click)="deleteArticle()">
+        <i class="ion-trash-a"></i> Delete Article
+      </button>
+    </span>
 
-    <button class="btn btn-sm btn-outline-danger" (click)="deleteArticle()">
-      <i class="ion-trash-a"></i> Delete Article
-    </button>
-  </span>
-
-  <span [hidden]="canModify">
-    <button
-      class="btn btn-sm action-btn"
-      [ngClass]="{
-        'btn-outline-secondary': !article.author.following,
-        'btn-secondary': article.author.following
-      }"
-      (click)="toggleFollow()"
-    >
-      <i class="ion-plus-round"></i>
-      &nbsp; {{ article.author.following ? 'Unfollow' : 'Follow' }}
-      {{ article.author.username }}
-    </button>
-    &nbsp;&nbsp;
-    <button
-      class="btn btn-sm btn-outline-primary"
-      [ngClass]="{
-        'btn-outline-primary': !article.favorited,
-        'btn-primary': article.favorited
-      }"
-      (click)="toggleFavorite()"
-    >
-      <i class="ion-heart"></i>
-      &nbsp; {{ article.favorited ? 'Unfavorite' : 'Favorite' }} Post
-      <span class="counter">({{ article.favoritesCount }})</span>
-    </button>
-  </span>
+    <span [hidden]="canModify" style="margin-left: 0">
+      <button
+        class="btn btn-sm btn-outline-primary"
+        [ngClass]="{
+          'btn-outline-primary': !article.favorited,
+          'btn-primary': article.favorited
+        }"
+        (click)="toggleFavorite()"
+        style="position: relative; top: 0; right: 0"
+      >
+        <i class="ion-heart"></i>
+        &nbsp; {{ article.favorited ? 'Unfavorite' : 'Favorite' }} Post
+        <span class="counter">({{ article.favoritesCount }})</span>
+      </button>
+    </span>
+  </div>
 </div>
